# chatgpt-retrieval-plugin

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.yaml  noxfile.py  pyproject.toml
.circleci/: config.yml
.docker/: Dockerfile
.well-known/: ai-plugin.json  openapi.yaml
notebooks/: comparables.ipynb  news.ipynb
src/chatgpt_retrieval_plugin/: app.py  main.py
src/chatgpt_retrieval_plugin/api/: router.py
src/chatgpt_retrieval_plugin/api/endpoints/: api.py  healthcheck.py
src/chatgpt_retrieval_plugin/api/schemas/: api.py  models.py
src/chatgpt_retrieval_plugin/common/: file.py  logging.py
src/chatgpt_retrieval_plugin/config/: settings.py
src/chatgpt_retrieval_plugin/data/: datastore.py  milvus_datastore.py  schemas.py
src/chatgpt_retrieval_plugin/features/: chunks.py  extract_metadata.py  openai.py  pii_detection.py
tests/: test_milvus_datastore.py
